<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simtechdata</groupId>
    <artifactId>Syphon</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.release>20</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.simtechdata.Main</mainClass>
        <javafx.version>21-ea+24</javafx.version>
        <maven-jar-plugin>3.3.0</maven-jar-plugin>
        <versions-maven-plugin>2.16.1</versions-maven-plugin>
        <javapackager>1.7.5</javapackager>
        <gluonfx-maven-plugin.version>1.0.21</gluonfx-maven-plugin.version>
        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
        <maven-surefire-plugin>3.2.2</maven-surefire-plugin>
        <resource-config-file/>
        <system-linker-arg/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <package.type/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.16.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.0</version>
        </dependency>
    </dependencies>
     <build>
        <plugins>
            <!-- Maven compiler plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>
            <!-- Maven Surefire plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <configuration>
                    <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
                    <argLine>-ea</argLine>
                </configuration>
            </plugin>
            <!-- JavaFX Maven plugin-->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                </configuration>
            </plugin>
            <!-- GUI native image builder plugin-->
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <linkerArgs>
                        <arg>${system-linker-arg}</arg>
                    </linkerArgs>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>${system-native-image-arg}</arg>
                        <arg>${compatibility-arg}</arg>
                    </nativeImageArgs>
                    <appIdentifier>${mainClass}</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Syphon</vendor>
                        <description>Syphon is a program that will crawl a web server and recursively traverse all of its folders and download files either in total, or selectively</description>
                        <packageType>${package.type}</packageType>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                        <!-- for macOS/iOS -->
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>
            <!-- Maven Jar plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- [=macOS] GUI native image builder profile -->
        <profile>
            <id>build-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64</system-native-image-arg>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-macos-latest.o</system-linker-arg>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <!-- [Linux] GUI native image builder profile -->
        <profile>
            <id>build-for-ubuntu-latest</id>
            <properties>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-ubuntu-latest.o</system-linker-arg>
                <compatibility-arg>-march=compatibility</compatibility-arg>
            </properties>
        </profile>
        <!-- [Windows] GUI native image builder profile -->
        <profile>
            <id>build-for-windows-latest</id>
            <properties>
                <package.type>msi</package.type>
                <system-linker-arg>${pom.basedir}/config/missing_symbols-windows-latest.o</system-linker-arg>
            </properties>
        </profile>
    </profiles>
</project>
